--- a/client/src/components/layout/Sidebar.module.css
+++ b/client/src/components/layout/Sidebar.module.css
@@ -6,6 +6,15 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+    width: 100%;
+    min-width: 0;
+    border-right: none;
+  }
 }
 
 /* Header */
